--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-
-<div class="home">
+<div class="home home2" >
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
