--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,54 @@
-
-.home2 {
-    color:green;
+.home-text{
+    color:#026670;
+    font-family: Helvetica, sans-serif;
+    font-size: 1.25em;
 }
 
+.post-excerpt {
+    display: flex;
+}
+
+.post-excerpt-image {
+    width: 62%;
+}
+
+.post-excerpt-text {
+    padding-left: 2em;
+    width: 38%;
+}
+
+.post-excerpt-text a, .post-title {
+    color:#026670;
+    text-decoration: none;
+    font-family: Helvetica, sans-serif;
+}
+
+.site-header { 
+    background-color: #e1e5ec;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+}
+
+.post-meta {
+    color:#aaaaaa;
+}
+
+.post-link a {
+    color:#116466;
+}
+
+.site-title, .page-link, .post-content a{
+    color: #026670 !important;
+    font-family: Helvetica, sans-serif;
+}
+
+.site-title { 
+    font-size: 3em;
+    font-weight: bold;
+}
+
+.footer-heading{
+    color: #ffffff;
+    font-family: Helvetica, sans-serif;
+
+}
