--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,17 +22,17 @@ layout: default
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <div class= "post-link"> <a href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a> </div>
-        </h3>
         {%- if site.show_excerpts -%}
         <div class="post-excerpt">
-
+          <div class= "post-excerpt-text"> 
+            <h3>
+              <div class= "post-link"> <a href="{{ post.url | relative_url }}">
+                {{ post.title | escape }}
+              </a> </div>
+              <span class="post-meta">{{ post.date | date: date_format }}</span>
+            </h3>
+             {{post.excerpt}} </a> </div>
           <div class= "post-excerpt-image"> <a href= "{{post.url}}"><img src ="{{post.image}}"/></a></div>
-          <div class= "post-excerpt-text"> <a href= "{{post.url}}" > {{post.excerpt}} </a> </div>
         </div>
         {%- endif -%}
       </li>
