home and gallery transitions

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,5 +34,7 @@ layout: default
     {%- include disqus_comments.html -%}
   {%- endif -%}
 
+  <div class="back-to-home"><a href="/"> Back to Home </a></div>
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
