--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,63 +1,88 @@
 ---
 layout: default
 ---
-<div class="home" >
-  <div class="home-text">{{ content }}</div>
-
+<div class="home">
+  
+  <div class="home-intro">{{content}}</div>
   {%- if page.title -%}
   {%- endif -%}
 
   {% if site.paginate %}
-    {% assign posts = paginator.posts %}
+  {% assign posts = paginator.posts %}
   {% else %}
-    {% assign posts = site.posts %}
+  {% assign posts = site.posts %}
   {% endif %}
 
+  <div class="home-text">Completed Projects - {{posts.size}} </div>
 
   {%- if posts.size > 0 -%}
-    {%- if page.list_title -%}
-      <h2 class="post-list-heading">{{ page.list_title }}</h2>
-    {%- endif -%}
-    <ul class="post-list">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {%- for post in posts -%}
-      <li>
-        {%- if site.show_excerpts -%}
-        <div class="post-excerpt">
-          <div class= "post-excerpt-text"> 
-            <h3>
-              <div class= "post-link"> <a href="{{ post.url | relative_url }}">
+  {%- if page.list_title -%}
+  <h2 class="post-list-heading">{{ page.list_title }}</h2>
+  {%- endif -%}
+  <ul class="post-list">
+    {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+    {%- for post in posts -%}
+
+    <li>
+      {%- if site.show_excerpts -%}
+        {% assign loopindex = forloop.index | modulo: 2 %}
+        {%- if loopindex == 1 -%}
+        <div class="post-excerpt-right">
+        <div class="post-excerpt-text">
+          <h3>
+            <div class="post-link"> <a href="{{ post.url | relative_url }}">
                 {{ post.title | escape }}
               </a> </div>
-              <span class="post-meta">{{ post.date | date: date_format }}</span>
-            </h3>
-             {{post.excerpt}} 
-            <a href="{{ post.url | relative_url }}"> Read more </a>
-            </div>
-          <div class= "post-excerpt-image"> <a href= "{{post.url}}"><img src ="{{post.image}}"/></a></div>
+            <span class="post-meta">{{ post.date | date: date_format }}</span>
+          </h3>
+          {{post.excerpt}}
+          <a href="{{ post.url | relative_url }}"> Continue Reading </a>
         </div>
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-
-    {% if site.paginate %}
-      <div class="pager">
-        <ul class="pagination">
-        {%- if paginator.previous_page %}
-          <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
-        {%- endif %}
-          <li><div class="current-page">{{ paginator.page }}</div></li>
-        {%- if paginator.next_page %}
-          <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
-        {%- endif %}
-        </ul>
+        <div class="post-excerpt-image-right"> <a href="{{post.url}}"><img src="{{post.image}}" /></a></div>
       </div>
-    {%- endif %}
+        {%- else -%}
+        <div class="post-excerpt-left">
+        <div class="post-excerpt-image-left"> <a href="{{post.url}}"><img src="{{post.image}}" /></a></div>
+        <div class="post-excerpt-text">
+          <h3>
+            <div class="post-link"> <a href="{{ post.url | relative_url }}">
+                {{ post.title | escape }}
+              </a> </div>
+            <span class="post-meta">{{ post.date | date: date_format }}</span>
+          </h3>
+          {{post.excerpt}}
+          <a href="{{ post.url | relative_url }}"> Continue Reading </a>
+        </div> </div>
+        {%- endif -%}
+      {%- endif -%}
+    </li>
+    {%- endfor -%}
+  </ul>
+
+  {% if site.paginate %}
+  <div class="pager">
+    <ul class="pagination">
+      {%- if paginator.previous_page %}
+      <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page
+          }}</a></li>
+      {%- else %}
+      <li>
+        <div class="pager-edge">•</div>
+      </li>
+      {%- endif %}
+      <li>
+        <div class="current-page">{{ paginator.page }}</div>
+      </li>
+      {%- if paginator.next_page %}
+      <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
+      {%- else %}
+      <li>
+        <div class="pager-edge">•</div>
+      </li>
+      {%- endif %}
+    </ul>
+  </div>
+  {%- endif %}
 
   {%- endif -%}
 
